force-app/main/default/objects/leaseworks__Invoice__c/leaseworks__Invoice__c.object-meta.xml
<CustomObject>
    <customHelpPage>leaseworks__DeskComHelpPageLease</customHelpPage>
    <description>Generic Object to hold Invoice information.</description>
    <label>Invoice</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>