force-app/main/default/objects/leaseworks__Invoice__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Date of Invoice Approval</description>
    <inlineHelpText>Date of Invoice Approval</inlineHelpText>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>