force-app/main/default/objects/leaseworks__Invoice__c/fields/Converted_Currency_Amt_Local__c.field-meta.xml
<CustomField>
    <fullName>Converted_Currency_Amt_Local__c</fullName>
    <description>This field will be calculated and displayed only when the exchange rate information is available.</description>
    <formula>Y_Hidden_Amount_Bef_Round_Local__c *  leaseworks__Exchange_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field displays the invoice amount in foreign currency based on the exchange rate entered. Total Invoice amount * Exchange Rate</inlineHelpText>
    <label>Z_Unused_2507 Converted Currency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>