force-app/main/default/objects/leaseworks__Invoice__c/fields/Converted_Effective_Tax_Amount_Local__c.field-meta.xml
<CustomField>
    <fullName>Converted_Effective_Tax_Amount_Local__c</fullName>
    <formula>IF(AND(leaseworks__Exchange_Rate__c != 0, NOT(ISPICKVAL(leaseworks__Transaction_Currency__c, &#39;&#39;))), leaseworks__Tax_Amount_Rollup__c * leaseworks__Exchange_Rate__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Effective Tax Amount Local</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>