force-app/main/default/objects/leaseworks__Invoice__c/fields/Date_Payment_Due_Local__c.field-meta.xml
<CustomField>
    <fullName>Date_Payment_Due_Local__c</fullName>
    <description>temp field for dataload review</description>
    <label>Date Payment Due Local</label>
    <length>80</length>
    <type>Text</type>
</CustomField>