force-app/main/default/objects/leaseworks__Invoice__c/fields/Exclude_from_Receivables_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Receivables_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cash has been received but is in the process of being transferred to the down stream bank account. Invoices are excluded so as not to overly state the receivables.</description>
    <inlineHelpText>Tick the box to exclude the invoice from the A/R balance. e.g. cash has been received but is in the process of being transferred to the downstream bank account.</inlineHelpText>
    <label>Exclude from Receivables Reporting</label>
    <type>Checkbox</type>
</CustomField>