force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Accounting_Description__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accounting_Description__c</fullName>
    <label>_Accounting Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>