force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Accounting_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accounting_Method__c</fullName>
    <description>The Accounting method for generating JE for Late Payment Interest</description>
    <label>Interest Accounting Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accrual</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>