force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Adjustment_3__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Adjustment_3__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Source: Fortress
Allow up to Three Adjustments on a given invoice.</description>
    <inlineHelpText>Adjustment amount can be entered as negative for reduction in invoiced amount</inlineHelpText>
    <label>Z_unused_2103 Adjustment 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>