force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Adjustment_Amount__c</fullName>
    <description>Indicates the adjustment amount (positive/negative) applicable on invoice.</description>
    <inlineHelpText>Indicates the adjustment amount (positive/negative) applicable on invoice.</inlineHelpText>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>