force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Airframe_Cycles_Landing_During_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airframe_Cycles_Landing_During_Month__c</fullName>
    <label>_Airframe Flight Cycles (FC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>