force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Airframe_Flight_Cycles_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Airframe_Flight_Cycles_FC__c</fullName>
    <formula>if( isBlank(leaseworks__Airframe_Cycles_Landing_During_Month__c) ,leaseworks__Utilization_Report__r.leaseworks__Airframe_Cycles_Landing_During_Month__c
, leaseworks__Airframe_Cycles_Landing_During_Month__c )</formula>
    <label>Airframe Flight Cycles (FC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>