force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount__c</fullName>
    <description>Total Amount Due : This is the amount due generated by the system. This might get overridden by the user.
Rent - Rent due + Intereset - MRO
Aircraft MR - UR.Total_Maintenance_Reserve__c
Assembly MR - AsmblyUR.Total_Maintenance_Reserve__c</description>
    <inlineHelpText>Amount of Invoice before taxes or any adjustments</inlineHelpText>
    <label>Original Invoiced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>