force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Paid__c</fullName>
    <label>Z_Unused_202406 Amount Paid</label>
    <summarizedField>leaseworks__Payment__c.leaseworks__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Payment__c.leaseworks__Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled, Pending, Declined, Submitted for Approval</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>leaseworks__Payment__c.leaseworks__Payment_Type__c</field>
        <operation>notEqual</operation>
        <value>Credit Memo</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Payment__c.leaseworks__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>