force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Amount_Paid_Remaining__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Paid_Remaining__c</fullName>
    <description>This is the new field introduced as part of the Unapply Cash feature. This field is the sum of the remaining amount on all approved and cancelled pending payments made against an invoice. Remaining amount = Amount - unapplied amount.</description>
    <inlineHelpText>Displays the total payment made on the invoice after deducting the Amount Unapplied.</inlineHelpText>
    <label>Amount Paid</label>
    <summarizedField>leaseworks__Payment__c.leaseworks__Remaining_Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Payment__c.leaseworks__Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Pending, Declined, Cancelled</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>leaseworks__Payment__c.leaseworks__Payment_Type__c</field>
        <operation>notEqual</operation>
        <value>Credit Memo</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Payment__c.leaseworks__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>