force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Amount_Paid_RollUp__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Amount_Paid_RollUp__c</fullName>
    <description>Shows the total amount paid toward this invoice in USD (ledger currency).
This value is calculated using the actual exchange rate applied on each payment.</description>
    <inlineHelpText>Shows the total amount paid toward this invoice in USD (ledger currency).
This value is calculated using the actual exchange rate applied on each payment.</inlineHelpText>
    <label>Z_Unused_2510 Amount Paid(Ledger)</label>
    <summarizedField>leaseworks__Payment__c.leaseworks__Amount_Applied_to_Invoice_Ledger__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Payment__c.leaseworks__Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Pending, Declined, Cancelled, Submitted for Approval</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>leaseworks__Payment__c.leaseworks__Payment_Type__c</field>
        <operation>notEqual</operation>
        <value>Credit Memo</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Payment__c.leaseworks__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>