force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Annual_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Annual_Interest_Rate__c</fullName>
    <formula>leaseworks__Lease__r.leaseworks__Late_Payment_Interest__c</formula>
    <inlineHelpText>Annual Interest Rate obtained from Lease.</inlineHelpText>
    <label>Z_Unused_2203 Annual Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>