force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Applied_Amount_Pending__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Applied_Amount_Pending__c</fullName>
    <label>Z_Unused_2012_Applied Amount (Pending)</label>
    <summarizedField>leaseworks__Applied_To__c.leaseworks__Credit_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Applied_To__c.leaseworks__Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Applied_To__c.leaseworks__Credit_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>