force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Associated_Invoice__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Associated_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Displays the corresponding invoice on which the service fee is being charged.</description>
    <inlineHelpText>Displays the corresponding invoice on which the service fee is being charged.</inlineHelpText>
    <label>Associated Invoice</label>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>Service Fee Invoice</relationshipLabel>
    <relationshipName>Invoices3</relationshipName>
    <type>Lookup</type>
</CustomField>