force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Assumed_Assembly_Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assumed_Assembly_Utilization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Z_Unused 2012 Assembly Utilization</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>leaseworks__Utilization_Report_List_Item__c.leaseworks__Assumed_Estimated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>leaseworks__Utilization_Report_List_Item__c.leaseworks__Assumed_Estimated__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Utilization_Report_List_Item__c</referenceTo>
    <relationshipLabel>Z_Unused 2012 Invoices (Assumed Assembly Utilization)</relationshipLabel>
    <relationshipName>Invoices_Assumed</relationshipName>
    <type>Lookup</type>
</CustomField>