force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Assumed_Monthly_Utilization__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assumed_Monthly_Utilization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2203 Original Utilization</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an Assumed Utilization belonging to the same lease.</errorMessage>
        <filterItems>
            <field>$Source.leaseworks__Lease__c</field>
            <operation>equals</operation>
            <valueField>leaseworks__Utilization_Report__c.leaseworks__Y_hidden_Lease__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Utilization_Report__c</referenceTo>
    <relationshipLabel>Invoices (Assumed Monthly Utilization)</relationshipLabel>
    <relationshipName>Invoices_Assumed</relationshipName>
    <type>Lookup</type>
</CustomField>