force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Availed_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Availed_Credit_Amount__c</fullName>
    <formula>null/*Credit_Availed_From__r.Credit_Amount__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2009 Availed Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>