force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Balance_Due__c</fullName>
    <formula>IF( OR(ISPICKVAL(leaseworks__Status__c,&#39;Declined&#39;),ISPICKVAL(leaseworks__Status__c,&#39;Cancelled&#39;)),0,  leaseworks__Total_Amount_Due__c  - (leaseworks__Amount_Paid_Remaining__c + leaseworks__Availed_Credit_Amount_Cm__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>