force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Balance_Due_For_Interest__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Balance_Due_For_Interest__c</fullName>
    <description>Unpaid Invoice Total Amount without Tax</description>
    <formula>null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unpaid Invoice Total Amount without Tax</inlineHelpText>
    <label>Z_Unused_2203 Balance Due For Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>