force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__BalanceDueForLessThan30Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__BalanceDueForLessThan30Days__c</fullName>
    <description>Balance due for invoices outstanding for 30 days or fewer.</description>
    <formula>IF(leaseworks__Ageing__c &lt;= 30, leaseworks__Balance_Due_Ledger__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Balance due for invoices outstanding for 30 days or fewer.</inlineHelpText>
    <label>BalanceDueForLessThan30Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>