force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only bank accounts that are not blocked for AR Usage and are, Active and Approved will be available for selection</inlineHelpText>
    <label>Bank Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Bank_Account__c.leaseworks__Block_AR_Usage__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>leaseworks__Bank_Account__c.leaseworks__Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>leaseworks__Bank_Account__c.leaseworks__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Bank_Account__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>