force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Cash_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cash_Security_Deposit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cash Security Deposit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Cash_Security_Deposit__c.leaseworks__Lease__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Lease__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Cash_Security_Deposit__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>