force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Contact_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Contact_Email_Address__c</fullName>
    <label>Contact Email Address</label>
    <type>Email</type>
</CustomField>