force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Conversion_Rate__c</fullName>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>