force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Amount__c</fullName>
    <label>Z_Unused_2009 Y_Hidden Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>