force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Credit_Applied_To__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Applied_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Invoice against which the credit is applied.</inlineHelpText>
    <label>Z_Unused_2009 Y_Hidden Credit Applied To</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Invoice__c.leaseworks__Lease__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Lease__c</valueField>
        </filterItems>
        <filterItems>
            <field>leaseworks__Invoice__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MR, Rent, Security Deposit</value>
        </filterItems>
        <filterItems>
            <field>leaseworks__Invoice__c.leaseworks__Total_Inclding_Tax__c</field>
            <operation>greaterThan</operation>
            <valueField>leaseworks__Invoice__c.leaseworks__Amount_Paid_Remaining__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>(Unused)Invoices (Credit Applied To)</relationshipLabel>
    <relationshipName>Credit_Applied_To</relationshipName>
    <type>Lookup</type>
</CustomField>