force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Credit_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Credit Note corresponding to this invoice, if any.</inlineHelpText>
    <label>Z_Unused_2009 Credit Note</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Invoice__c.leaseworks__Lease__c</field>
            <operation>equals</operation>
            <valueField>$Source.leaseworks__Lease__c</valueField>
        </filterItems>
        <filterItems>
            <field>leaseworks__Invoice__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Credit Note</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Invoice__c</referenceTo>
    <relationshipLabel>(Unused)Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>