force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Daily_Int_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Daily_Int_Rate__c</fullName>
    <description>Daily Interest Rate (Rate / Days)</description>
    <formula>leaseworks__Y_Hidden_Daily_Interest_Rate__c/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Daily Interest Rate % (Rate/Days)</inlineHelpText>
    <label>Daily Int. Rate %</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>