force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Date_Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Invoice_Sent__c</fullName>
    <description>This field is used to determine when the Invoice record was sent.</description>
    <label>Date Invoice Sent</label>
    <type>Date</type>
</CustomField>