force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Date_Of_Approval_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_Of_Approval_New__c</fullName>
    <label>_Date of Approval</label>
    <type>DateTime</type>
</CustomField>