force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Date_of_MR_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_MR_Payment_Due__c</fullName>
    <description>Date when payment is due (For MR invoices, X number of days after receiving invoice as specified in the lease. For Rent invoices, it is copied over from rent slip.)</description>
    <inlineHelpText>Payment of the invoice is due on this date. Some due dates are auto-populated but users can edit the record and enter another date.</inlineHelpText>
    <label>Date Payment Due</label>
    <type>Date</type>
</CustomField>