force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Days_In_A_Year__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Days_In_A_Year__c</fullName>
    <label>Days In Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>365</fullName>
                <default>true</default>
                <label>365</label>
            </value>
            <value>
                <fullName>360</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>