force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Deferred_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deferred_Due_Date__c</fullName>
    <description>Displays the Due Date of the last Payment Plan invoice</description>
    <inlineHelpText>Displays the Due Date of the last Payment Plan invoice</inlineHelpText>
    <label>Deferred Due Date</label>
    <type>Date</type>
</CustomField>