force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Effective_Interest_RateN__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_Interest_RateN__c</fullName>
    <label>Effective Interest Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>