force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Effective_Tax_Amnt__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_Tax_Amnt__c</fullName>
    <description>Amount of tax to be collected from the invoice. Tax Amount is based on the Tax percentage of the country of the lessor, if tax is applicable as set on the lease. Used when multi-currency is enabled.</description>
    <formula>leaseworks__Tax_Amount_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount of tax to be collected from the invoice. Tax Amount is based on the Tax percentage of the country of the lessor, if tax is applicable as set on the lease. Used when multi-currency is enabled.</inlineHelpText>
    <label>Effective Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>