force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Effective_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Effective_Tax_Rate__c</fullName>
    <description>System calculated tax  rate that accounts all the updates on the Tax lines.</description>
    <formula>if(leaseworks__Invoiced_Amount_Formula__c == 0,0,leaseworks__Tax_Amount_Rollup__c / (leaseworks__Invoiced_Amount_Formula__c + leaseworks__Gross_Up_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>System calculated tax  rate that accounts all the updates on the Tax lines.</inlineHelpText>
    <label>Effective Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>