force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Entity_On_Service_Fee__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Entity_On_Service_Fee__c</fullName>
    <description>This field copies the entity from service fee record</description>
    <label>_Entity On Service Fee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>