force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Exchange_Rate__c</fullName>
    <description>Exchange Rate</description>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>