force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Flight_Cycles_For_Month__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Flight_Cycles_For_Month__c</fullName>
    <label>Flight Cycles For Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>