force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Floating_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Floating_Interest_Rate__c</fullName>
    <description>rate from the Interest Rate Index (Daily) table based on the Effective Interest Date input by the user</description>
    <inlineHelpText>rate from the Interest Rate Index (Daily) table based on the Effective Interest Date input by the user</inlineHelpText>
    <label>Floating Interest Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>