force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Floating_Interest_Rate_Index__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Floating_Interest_Rate_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Floating Interest Rate Index</label>
    <referenceTo>leaseworks__Interest_Rate_Index__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>