force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__For_Period_Ending_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__For_Period_Ending_F__c</fullName>
    <formula>IF(
   ISNULL(leaseworks__Month_Ending__c) ,  DATE( YEAR(ADDMONTHS(leaseworks__Invoice_Date__c,1) ) ,MONTH(ADDMONTHS(leaseworks__Invoice_Date__c,1)),1) - 1, leaseworks__Month_Ending__c

)</formula>
    <label>For Period Ending</label>
    <type>Date</type>
</CustomField>