force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Grace_Period_After_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Grace_Period_After_Due_Date__c</fullName>
    <description>Indicates the number of days after the due date for which interest won&#39;t be charged</description>
    <formula>leaseworks__Lease__r.leaseworks__Grace_Period_After_Due_Date__c</formula>
    <inlineHelpText>Indicates the number of days after the due date for which interest won&#39;t be charged</inlineHelpText>
    <label>Grace Period After Due Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>