force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Gross_Up_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Gross_Up_Amount__c</fullName>
    <description>Total amount due, including any portion withheld for tax.</description>
    <inlineHelpText>Total amount due, including any portion withheld for tax.</inlineHelpText>
    <label>Gross Up Amount($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>