force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Head_Lease_Sub_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Head_Lease_Sub_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an invoice is part of a Head Lease/Sub Lease contract.</description>
    <inlineHelpText>Indicates if an invoice is part of a Head Lease/Sub Lease contract.</inlineHelpText>
    <label>Head Lease/Sub Lease</label>
    <type>Checkbox</type>
</CustomField>