force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Header_Company__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Header_Company__c</fullName>
    <description>Accounting: Header company on the lease</description>
    <formula>/*Lease__r.Legal_Entity__r.Name*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2406_Header Company</label>
    <type>Text</type>
</CustomField>