force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Interest_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Calculation_Method__c</fullName>
    <label>Interest Calculation Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous Balance</fullName>
            </value>
            <value>
                <fullName>Adjusted Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>