force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Interest_Rate_percent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interest_Rate_percent__c</fullName>
    <description>Default Interest Rate per Lease agreement</description>
    <inlineHelpText>Default Interest Rate per Lease agreement</inlineHelpText>
    <label>Interest Rate Percent</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>